--- a/COMP-140/YogaCastStudy/yoga.css
+++ b/COMP-140/YogaCastStudy/yoga.css
@@ -1,20 +1,33 @@
 body{
-    background-color: #F5F5F5;
+    background-color: #3F2860;
     color: #3F2860;
+}
+#wrapper{
+    background-color: #FFFFFF;
+    min-width: 1000px;
+    max-width: 1280px;
+    box-shadow: 5px 5px 5px #828282;
+    
 }
 
 header{
     background-color: #9BC1C2;
-    text-align: center;
+    background-image: url("lilyheader.jpg");
+    background-position: right;
+    background-repeat: no-repeat;
+    height: 150px;
 }
 
 h1{
     line-height: 200%;
+    padding-top: 50px;
+    padding-left: 2em;
 }
 
 nav{
 font-weight: bold;
 text-align: center;
+padding: 1em;
 }
 
 a:link { text-decoration: none; }
@@ -29,5 +42,20 @@ footer{
     background-color: #9BC1C2;
     font-size: small;
     font: italic;
+    text-align: center;
+    padding: 1em;
+}
+
+img{
+    padding-left: 2em;
+    padding-right: 2em;
+    display: block;
+}
+.img{
+    padding-left: 1em;
+    padding-right: 1em;
+}
+
+#hero{
     text-align: center;
 }
