--- a/COMP-140/YogaCastStudy/yoga.css
+++ b/COMP-140/YogaCastStudy/yoga.css
@@ -4,8 +4,8 @@ body{
 }
 #wrapper{
     background-color: #FFFFFF;
-    min-width: 1000px;
-    max-width: 1280px;
+    min-width: 1200px;
+    max-width: 1480px;
     box-shadow: 5px 5px 5px #828282;
     
 }
@@ -15,7 +15,7 @@ header{
     background-image: url("lilyheader.jpg");
     background-position: right;
     background-repeat: no-repeat;
-    height: 150px;
+    height: 160px;
 }
 
 h1{
@@ -26,17 +26,54 @@ h1{
 
 nav{
 font-weight: bold;
-text-align: center;
 padding: 1em;
+float: left;
+width: 160px;
 }
 
-a:link { text-decoration: none; }
 
-a:visited { text-decoration: none; }
 
-a:hover { text-decoration: none; }
+a:link { 
+    text-decoration: none; 
+    display: block;
+    text-align: center;
+    font-weight: bold;
+    padding: 1em;
+    margin-bottom: 1em;
+    color: #3F2860
+}
 
-a:active { text-decoration: none; }
+a:visited { 
+    text-decoration: none; 
+    display: block;
+    text-align: center;
+    font-weight: bold;
+    padding: 1em;
+    margin-bottom: 1em;
+    color: #497777;
+}
+
+a:hover {
+    text-decoration: none; 
+    display: block;
+    text-align: center;
+    font-weight: bold;
+    padding: 1em;
+    margin-bottom: 1em; 
+    color: #A26100;
+    border: 3px inset #333333;
+}
+
+a:active { 
+    text-decoration: none; 
+    display: block;
+    text-align: center;
+    font-weight: bold;
+    padding: 1em;
+    margin-bottom: 1em; 
+}
+
+header, nav, main, footer { display: block; }
 
 footer{
     background-color: #9BC1C2;
@@ -54,6 +91,10 @@ img{
 .img{
     padding-left: 1em;
     padding-right: 1em;
+}
+
+*{
+    box-sizing: border-box;
 }
 
 #hero{
