--- a/COMP-140/PacificTrail/pacific.css
+++ b/COMP-140/PacificTrail/pacific.css
@@ -24,9 +24,35 @@ h1{
 }
 
 nav{
+    text-decoration: none;
     font-weight: bold;
     background-color: skyblue;
     padding: 5px;
+    float: left;
+    width: 160px;
+    padding-top: 20px;
+    padding-right: 5px;
+    padding-left: 20px;
+}
+
+nav{
+    text-decoration: none;
+    float: left;
+    width: 160px;
+    padding-top: 20px;
+    padding-right: 5px;
+    padding-left: 20px;
+}
+
+nav li{
+    display: inline-block;
+}
+
+
+.nav{
+    float: none;
+    width: auto;
+    padding: 0.5em;
 }
 
 h2{
@@ -52,15 +78,6 @@ footer{
     margin-left: 170px;
 }
 
-nav{
-    text-decoration: none;
-    float: left;
-    width: 160px;
-    padding-top: 20px;
-    padding-right: 5px;
-    padding-left: 20px;
-}
-
 *{
     box-sizing: border-box;
 }
@@ -70,27 +87,109 @@ nav{
 }
 
 #homehero{
-    margin-left: 170px;
+    margin-left: 0;
 }
 
 #yurthero{
-    margain-left: 170px;
+    margain-left: 0;
 }
 #trailhero{
-    margin-left: 170px;
+    margin-left: 0;
+}
+
+.body{
+    margin: 0;
+    padding: 0;
+    background-image: none;
+}
+.h1{
+    margin: 0;
+}
+
+.wrapper{
+    width: auto;
+    min-width: 0;
+    margin: 0;
+    box-shadow: none;
+}
+nav a{
+    padding: 1em;
 }
 
 nav a:link{
     color: #000033;
 }
 
+#mobile { 
+    display: none; 
+}
+
+#desktop { 
+    display: inline; 
+}
+
+@media only screen and (max-width: 1024px) {
+}
+
 main{
     background-color: white;
-    margin-left: 170px;
+    margin-left: 0;
     padding-top: 1px;
     padding-bottom: 1px;
+    font-size: 90%;
+    padding: 1em;
+}
+
+footer{
+    margin: 0;
 }
 
 header, nav, main, footer {
     display: block;
+}
+
+@media only all and (max-width: 768px){
+    h1{
+        height: 100%;
+        font-size: 1.5em;
+        padding-left: 0.3em;
+    }
+    nav{
+        padding: 0;
+    }
+    nav ul{
+        margin: 0;
+        padding: 0;
+    }
+    nav li{
+        display: block;
+        margin: 0;
+        padding: 0;
+    }
+    main{
+        padding-top: 0.1em;
+        padding-right: 0.6em;
+        padding-bottom: 0.1em;
+        padding-left: 0.4em;
+    }
+
+    #homehero{
+        display: none;
+    }
+    #yurthero{
+        display: none;
+    }
+    #trailhero{
+        display: none;
+    }
+    footer{
+        padding: 0;
+    }
+    
+    #mobile{
+        display: none;
+    }
+    #desktop{
+        display: none;
+    }
 }
