--- a/COMP-140/YogaCaseStudy/yoga.css
+++ b/COMP-140/YogaCaseStudy/yoga.css
@@ -100,3 +100,123 @@ img{
 #hero{
     text-align: center;
 }
+
+#mobile{
+    display: none;
+}
+
+#desktop{
+    display: inline;
+}
+
+@media only screen and (max-width: 1024px){
+    body{
+        margin: 0;
+        padding: 0;
+    }
+
+    header{
+        padding: 1px;
+    }
+
+    nav{
+        float: none;
+        width: auto;
+        padding-left: 2em;
+    }
+
+    nav a{
+        padding: 0.2em;
+        margin-left: 0.3m;
+        float: left;
+        width: 23%;
+    }
+
+    main{
+        padding-top: 2.5em;
+        padding-bottom: 2.5em;
+        padding-left: 1em;
+        padding-right: 1em;
+        margin: 0;
+        font-size: 90%;
+    }
+
+    #hero{
+        width: 100%;
+        height: auto;
+    }
+
+    #img{
+        width: 100%;
+        height: auto;
+    }
+
+    h2, h3, p{
+        padding-left: 2em;
+        padding-right: 2em;
+    }
+
+    main ul{
+        margin-left: 2em;
+    }
+    
+}
+
+@media only all and (max-width: 768px){
+    h1{
+        font-size: 2em;
+        padding-top: 0.25em;
+        padding-left: 1.5em;
+        width: 85%;
+        text-align: center;
+    }
+
+    nav a{
+        padding: 0.5em;
+        width: 45%;
+        float: left;
+        min-width: 6em;
+        margin-left: 0.5em;
+    }
+
+    main{
+        padding-top: 0;
+    }
+    floatleft{
+        float: none;
+        display: none;
+    }
+
+    #hero{
+        display: none;
+    }
+    footer{
+        padding: 0.5em;
+        margin: 0;
+    }
+
+    #mobile{
+        display: inline;
+    }
+    #desktop{
+        display: none;
+    }
+}
+
+table{
+    width: 60%;
+    border: 1px solid purple;
+    border-collapse: collapse;
+    margin-bottom: 1em;
+}
+
+td{
+    padding: 5px;
+    border: 1px solid purple;
+}
+
+caption{
+    margin: 1em;
+    font-weight: bold;
+    font-size: 120%;
+}
